[gd_scene load_steps=7 format=3 uid="uid://cb3rtd2lke55m"]

[ext_resource type="Script" uid="uid://dc85v6oyh3uut" path="res://scenes/shopscreen.gd" id="1_gc8mk"]
[ext_resource type="Script" uid="uid://dooyodn4kniip" path="res://scenes/button_2.gd" id="2_3q46q"]

[sub_resource type="Theme" id="Theme_y4u7l"]
default_font_size = 50

[sub_resource type="Theme" id="Theme_6p4ay"]
default_font_size = 40

[sub_resource type="Theme" id="Theme_ctwpq"]
default_font_size = 40

[sub_resource type="Theme" id="Theme_1q0x7"]

[node name="ShopScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gc8mk")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 447.0
offset_top = 36.0
offset_right = 710.0
offset_bottom = 105.0
theme = SubResource("Theme_y4u7l")
text = "Shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 806.0
offset_top = 52.0
offset_right = 924.0
offset_bottom = 107.0
theme = SubResource("Theme_6p4ay")
text = "Score:"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 451.0
offset_top = 460.0
offset_right = 717.0
offset_bottom = 547.0
theme = SubResource("Theme_ctwpq")
text = "Play again"

[node name="magnit" type="Button" parent="." groups=["player"]]
layout_mode = 0
offset_left = 279.0
offset_top = 198.0
offset_right = 390.0
offset_bottom = 229.0
text = "Buy"
script = ExtResource("2_3q46q")

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 148.0
offset_top = 200.0
offset_right = 273.0
offset_bottom = 228.0
theme = SubResource("Theme_1q0x7")
text = "Magnit: 10 coins"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 393.0
offset_top = 201.0
offset_right = 448.0
offset_bottom = 227.0
text = "Lvl: 0"

[node name="Label6" type="Label" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 240.0
offset_right = 273.0
offset_bottom = 275.0
text = "Expensive coins: 20 coins
Multiplicater"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 236.0
offset_right = 390.0
offset_bottom = 268.0
text = "Buy"

[node name="Label7" type="Label" parent="."]
layout_mode = 0
offset_left = 396.0
offset_top = 241.0
offset_right = 452.0
offset_bottom = 271.0
text = "Lvl: 0"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 447.0
offset_top = 201.0
offset_right = 498.0
offset_bottom = 224.0
text = "Max: 5"

[node name="Label8" type="Label" parent="."]
layout_mode = 0
offset_left = 447.0
offset_top = 240.0
offset_right = 498.0
offset_bottom = 263.0
text = "Max: 3"

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="magnit" to="." method="_on_magnit_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_button_2_button_down"]
